--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
 body {
-  background-color: rgb(250, 250, 250);
-  padding: 10pxt;
+  background-color: whitesmoke;
+  padding: 12px;
   max-width: 70%;
   margin: auto;
 }
 
 h1 {
-  font-size: x-large;
-  font-weight: 1;
+  font-size: large;
+  font-weight: bold;
   color: black;
-  background-color: lightgray;
   text-align: center;
   font-family: monospace;
   text-decoration: none;
@@ -24,23 +23,24 @@ h1 {
 
 h2 {
   color: black;
-  font-size: 18px;
+  font-size: large;
   font-family: monospace;
   font-weight: bold;
+  text-align: center;
 }
 
 h4 {
   color: black;
-  font-size: 18px;
-  font-family: sans-serif;
+  font-size: medium;
+  font-family: arial;
   font-weight: normal;
   line-height: 1.4em;
 }
 
 div {
-  font-size: 18px;
-  line-height: 1.4em;
-  font-family: "Times New Roman", Times, serif;
+  font-size: 17px;
+  line-height: 1.6em;
+  font-family: Arial;
   text-align: justify;
 }
 
@@ -55,7 +55,7 @@ p {
 nav {
   color: rgb(0, 0, 0);
   font-size: 16px;
-  font-family: sans-serif;
+  font-family: Arial;
   font-weight: normal;
   text-decoration: none;
 }
@@ -67,7 +67,7 @@ li {
 
 a {
   text-decoration: underline;
-  color: darkblue;
+  color: darkslateblue;
 }
 
 a:hover {
